added phone, moved all that related to facebook to identity model

--- a/app/views/users/_form_shared_inputs.html.erb
+++ b/app/views/users/_form_shared_inputs.html.erb
@@ -1,3 +1,4 @@
 <%= f.input :first_name, label: t("model.firstName"), autofocus: true %>
 <%= f.input :last_name, label: t("model.lastName") %>
 <%= f.input :email, label: t("model.email") %>
+<%= f.input :phone, label: t("model.phone") %>
