--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,13 +20,12 @@
 
 <p>User: <%= @user.full_name %></p>
 <p>Email: <%= @user.email if @user.email %></p>
+<p>Phone: <%= @user.phone if @user.phone %></p>
 <p>Roles: <%= @user.get_user_roles_name if @user.roles %></p>
+<%= image_tag @user.image if @user.image%>
 
 <% unless @user.identity.nil? %>
-    <h4>Identity</h4>
-    <%= image_tag @user.identity.image %>
     <p>Provider: <%= @user.identity.provider %></p>
-    <p>Email: <%= @user.identity.email %></p>
 <% end %>
 
 
