added swap resource, and added image_url attribute to item resource

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -5,6 +5,7 @@
     <%= f.association :user %>
     <%= f.association :type %>
     <%= f.input :description %>
+    <%= f.input :image_url %>
     <%= f.input :original_price %>
     <%= f.input :height %>
     <%= f.input :width %>
