--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -23,6 +23,7 @@
         <td><%= item.user %></td>
         <td><%= item.type %></td>
         <td><%= item.description %></td>
+        <td><%= item.image_url %></td>
         <td><%= item.original_price %></td>
         <td><%= item.height %></td>
         <td><%= item.width %></td>
