--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -16,6 +16,11 @@
 </p>
 
 <p>
+  <strong>Image Url:</strong>
+  <%= @item.image_url %>
+</p>
+
+<p>
   <strong>Original price:</strong>
   <%= @item.original_price %>
 </p>
