--- a/app/views/swaps/show.html.erb
+++ b/app/views/swaps/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>User:</strong>
-  <%= @swap.user %>
+  <strong>User1:</strong>
+  <%= @swap.user1_id %>
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @swap.user %>
+  <strong>User2:</strong>
+  <%= @swap.user2_id %>
 </p>
 
 <p>
