--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -47,12 +47,12 @@
 
 <p>
   <strong>Is active?:</strong>
-  <%= @item.is_active? %>
+  <%= @item.is_active %>
 </p>
 
 <p>
   <strong>Is blocked?:</strong>
-  <%= @item.is_blocked? %>
+  <%= @item.is_blocked %>
 </p>
 
 <%= link_to 'Edit', edit_item_path(@item) %> |
