--- a/app/views/taggings/_form.html.erb
+++ b/app/views/taggings/_form.html.erb
@@ -2,8 +2,8 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.association :item %>
-    <%= f.association :tag %>
+    <%= f.association :item, label_method: :description, value_method: :id %>
+    <%= f.association :tag, label_method: :description, value_method: :id %>
   </div>
 
   <div class="form-actions">
