--- a/app/views/swaps/show.html.erb
+++ b/app/views/swaps/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>User1:</strong>
-  <%= @swap.user1_id %>
+  <%= @swap.user1.full_name %>
 </p>
 
 <p>
   <strong>User2:</strong>
-  <%= @swap.user2_id %>
+  <%= @swap.user2.full_name %>
 </p>
 
 <p>
