--- a/app/views/wants/show.html.erb
+++ b/app/views/wants/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>User:</strong>
-  <%= @want.user %>
+  <%= @want.user.full_name %>
 </p>
 
 <p>
   <strong>Item:</strong>
-  <%= @want.item %>
+  <%= @want.item.description %>
 </p>
 
 <p>
