--- a/app/views/ages/index.html.erb
+++ b/app/views/ages/index.html.erb
@@ -1,24 +1,26 @@
 <h1>Listing ages</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="span8">
 
-  <tbody>
-    <% @ages.each do |age| %>
-      <tr>
-        <td><%= age.description %></td>
-        <td><%= link_to 'Show', age %></td>
-        <td><%= link_to 'Edit', edit_age_path(age) %></td>
-        <td><%= link_to 'Destroy', age, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <table class="table table-condensed">  <thead>
+        <tr>
+          <th>Description</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @ages.each do |age| %>
+          <tr>
+            <td><%= age.description %></td>
+            <td><%= link_to 'Show', age %></td>
+            <td><%= link_to 'Edit', edit_age_path(age) %></td>
+            <td><%= link_to 'Destroy', age, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+  </table>
+</div>
 
 <br>
 
