--- a/app/views/blocks/index.html.erb
+++ b/app/views/blocks/index.html.erb
@@ -1,26 +1,29 @@
 <h1>Listing blocks</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Item</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<<div class="span8">
 
-  <tbody>
-    <% @blocks.each do |block| %>
-      <tr>
-        <td><%= block.user.full_name %></td>
-        <td><%= block.item.description %></td>
-        <td><%= link_to 'Show', block %></td>
-        <td><%= link_to 'Edit', edit_block_path(block) %></td>
-        <td><%= link_to 'Destroy', block, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <table class="table table-condensed">>
+     <thead>
+        <tr>
+          <th>User</th>
+          <th>Item</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @blocks.each do |block| %>
+          <tr>
+            <td><%= block.user.full_name %></td>
+            <td><%= block.item.description %></td>
+            <td><%= link_to 'Show', block %></td>
+            <td><%= link_to 'Edit', edit_block_path(block) %></td>
+            <td><%= link_to 'Destroy', block, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+  </table>
+</div>
 
 <br>
 
