--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,43 +1,47 @@
 <h1>Listing items</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Type</th>
-      <th>Description</th>
-      <th>Original price</th>
-      <th>Height</th>
-      <th>Width</th>
-      <th>Age</th>
-      <th>State</th>
-      <th>Is active?</th>
-      <th>Is blocked?</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="span8">
 
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= item.user.full_name %></td>
-        <td><%= item.type.description %></td>
-        <td><%= item.description %></td>
-        <td><%= item.image_url %></td>
-        <td><%= item.original_price %></td>
-        <td><%= item.height %></td>
-        <td><%= item.width %></td>
-        <td><%= item.age.description %></td>
-        <td><%= item.state.description %></td>
-        <td><%= item.is_active %></td>
-        <td><%= item.is_blocked %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <table class="table table-condensed">
+      <thead>
+        <tr>
+          <th>User</th>
+          <th>Type</th>
+          <th>Description</th>
+          <th>Image Url</th>
+          <th>Original price</th>
+          <th>Height</th>
+          <th>Width</th>
+          <th>Age</th>
+          <th>State</th>
+          <th>Is active?</th>
+          <th>Is blocked?</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @items.each do |item| %>
+          <tr>
+            <td><%= item.user.full_name %></td>
+            <td><%= item.type.description %></td>
+            <td><%= item.description %></td>
+            <td><%= item.image_url %></td>
+            <td><%= item.original_price %></td>
+            <td><%= item.height %></td>
+            <td><%= item.width %></td>
+            <td><%= item.age.description %></td>
+            <td><%= item.state.description %></td>
+            <td><%= item.is_active %></td>
+            <td><%= item.is_blocked %></td>
+            <td><%= link_to 'Show', item %></td>
+            <td><%= link_to 'Edit', edit_item_path(item) %></td>
+            <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+  </table>
+</div>
 
 <br>
 
