--- a/app/views/swaps/index.html.erb
+++ b/app/views/swaps/index.html.erb
@@ -1,30 +1,32 @@
 <h1>Listing swaps</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>User1</th>
-      <th>User2</th>
-      <th>User1 items</th>
-      <th>User2 items</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="span8">
 
-  <tbody>
-    <% @swaps.each do |swap| %>
-      <tr>
-        <td><%= swap.user1.full_name %></td>
-        <td><%= swap.user2.full_name %></td>
-        <td><%= swap.user1_items %></td>
-        <td><%= swap.user2_items %></td>
-        <td><%= link_to 'Show', swap %></td>
-        <td><%= link_to 'Edit', edit_swap_path(swap) %></td>
-        <td><%= link_to 'Destroy', swap, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <table class="table table-condensed">  <thead>
+        <tr>
+          <th>User1</th>
+          <th>User2</th>
+          <th>User1 items</th>
+          <th>User2 items</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @swaps.each do |swap| %>
+          <tr>
+            <td><%= swap.user1.full_name %></td>
+            <td><%= swap.user2.full_name %></td>
+            <td><%= swap.user1_items %></td>
+            <td><%= swap.user2_items %></td>
+            <td><%= link_to 'Show', swap %></td>
+            <td><%= link_to 'Edit', edit_swap_path(swap) %></td>
+            <td><%= link_to 'Destroy', swap, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+  </table>
+</div>
 
 <br>
 
