--- a/app/views/taggings/index.html.erb
+++ b/app/views/taggings/index.html.erb
@@ -1,26 +1,28 @@
 <h1>Listing taggings</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Item</th>
-      <th>Tag</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="span8">
 
-  <tbody>
-    <% @taggings.each do |tagging| %>
-      <tr>
-        <td><%= tagging.item.description %></td>
-        <td><%= tagging.tag.description %></td>
-        <td><%= link_to 'Show', tagging %></td>
-        <td><%= link_to 'Edit', edit_tagging_path(tagging) %></td>
-        <td><%= link_to 'Destroy', tagging, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <table class="table table-condensed">  <thead>
+        <tr>
+          <th>Item</th>
+          <th>Tag</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @taggings.each do |tagging| %>
+          <tr>
+            <td><%= tagging.item.description %></td>
+            <td><%= tagging.tag.description %></td>
+            <td><%= link_to 'Show', tagging %></td>
+            <td><%= link_to 'Edit', edit_tagging_path(tagging) %></td>
+            <td><%= link_to 'Destroy', tagging, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+  </table>
+</div>
 
 <br>
 
