--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,25 +1,27 @@
 <h1>Listing tags</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="span8">
 
-  <tbody>
-    <% @tags.each do |tag| %>
-      <tr>
-        <td><%= tag.description %></td>
-        <td><%= link_to 'Show', tag %></td>
-        <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
-        <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <table class="table table-condensed">
+      <thead>
+        <tr>
+          <th>Description</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
+      <tbody>
+        <% @tags.each do |tag| %>
+          <tr>
+            <td><%= tag.description %></td>
+            <td><%= link_to 'Show', tag %></td>
+            <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
+            <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+  </table>
+</div>
 <br>
 
 <%= link_to 'New Tag', new_tag_path %>
