--- a/app/views/wants/index.html.erb
+++ b/app/views/wants/index.html.erb
@@ -1,29 +1,32 @@
 <h1>Listing wants</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Item</th>
-      <th>Extra mile?</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="span8">
 
-  <tbody>
-    <% @wants.each do |want| %>
-      <tr>
-        <td><%= want.user.full_name %></td>
-        <td><%= want.item.description %></td>
-        <td><%= want.extra_mile? %></td>
-        <td><%= link_to 'Show', want %></td>
-        <td><%= link_to 'Edit', edit_want_path(want) %></td>
-        <td><%= link_to 'Destroy', want, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <table class="table table-condensed">
+      <thead>
+        <tr>
+          <th>User</th>
+          <th>Item</th>
+          <th>Extra mile?</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-<br>
+      <tbody>
+        <% @wants.each do |want| %>
+          <tr>
+            <td><%= want.user.full_name %></td>
+            <td><%= want.item.description %></td>
+            <td><%= want.extra_mile? %></td>
+            <td><%= link_to 'Show', want %></td>
+            <td><%= link_to 'Edit', edit_want_path(want) %></td>
+            <td><%= link_to 'Destroy', want, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-<%= link_to 'New Want', new_want_path %>
+    <br>
+
+    <%= link_to 'New Want', new_want_path %>
+</div>
