added and integratd paperclip for items

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -16,8 +16,10 @@
 </p>
 
 <p>
-  <strong>Image Url:</strong>
-  <%= @item.image_url %>
+  <strong>Image:</strong>
+  <%= image_tag @item.image.url %>
+  <!--%= image_tag @item.image.url(:medium) %-->
+
 </p>
 
 <p>
