--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -5,7 +5,7 @@
     <%= f.association :user, label_method: :full_name, value_method: :id %>
     <%= f.association :type, label_method: :description, value_method: :id %>
     <%= f.input :description %>
-    <%= f.input :image_url %>
+    <%= f.file_field :image %>
     <%= f.input :original_price %>
     <%= f.input :height %>
     <%= f.input :width %>
