--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -26,7 +26,7 @@
             <td><%= item.user.full_name %></td>
             <td><%= item.type.description %></td>
             <td><%= item.description %></td>
-            <td><%= item.image_url %></td>
+            <td><%= image_tag item.image.url(:thumb) %></td>
             <td><%= item.original_price %></td>
             <td><%= item.height %></td>
             <td><%= item.width %></td>
