added abilities, added json to users, updated to cancancan

--- a/app/views/wants/_form.html.erb
+++ b/app/views/wants/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <%= f.association :user, label_method: :full_name, value_method: :id %>
     <%= f.association :item, label_method: :description, value_method: :id %>
-    <%= f.input :extra_mile? %>
+    <%= f.input :extra_mile %>
   </div>
 
   <div class="form-actions">
