--- a/app/views/blocks/index.html.erb
+++ b/app/views/blocks/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Listing blocks</h1>
 
-<<div class="span8">
+<div class="span8">
 
-  <table class="table table-condensed">>
+  <table class="table table-condensed">
      <thead>
         <tr>
           <th>User</th>
