--- a/app/views/layouts/_content.html.erb
+++ b/app/views/layouts/_content.html.erb
@@ -1,28 +1,26 @@
-<% if current_page?(root_path) %>
-    <% if content_for?(:jumbotron) %>
-        <div class="jumbotron">
-          <div class="container">
-            <%= yield :jumbotron %>
-          </div>
-        </div>
+<% if current_page?(root_path) && !user_signed_in?%>
+  <div class="row">
+  <div class="col-lg-6 col-md-offset-3">
+  <div class="jumbotron">
+    <% if content_for?(:welcome) %>
+      <div class="welcome">
+        <%= yield :welcome %>
+      </div>
     <% end %>
-<% end %>
-
-
-<div class="row">
-  <div class="container">
-    <div class="col-lg-12 col-sm-12">
-      <%= yield %>
-    </div>
-
-    <!--<div class="col-lg-9 col-sm-9">-->
-    <%#= yield %>
-    <!--</div>-->
-
-    <!--<div class="col-lg-3 col-sm-3">-->
-    <!--<div class="well">-->
-    <%#= yield %>
-    <!--</div>-->
-    <!--</div>-->
+    <% if content_for?(:login) %>
+      <div class="login">
+        <%= yield :login %>
+      </div>
+    <% end %>
   </div>
-</div>
+  </div>
+  </div>
+
+<% else %>
+
+  <div class="row">
+    <div class="col-lg-12 col-sm-12">
+       <%= yield %>
+    </div>
+  </div>
+<% end %>
