--- a/app/views/layouts/_navigation_footer.html.erb
+++ b/app/views/layouts/_navigation_footer.html.erb
@@ -1,12 +1,9 @@
 <footer>
   <hr>
-  <p class="pull-right">
-    <%= link_to '<span class="glyphicon-class glyphicon glyphicon-chevron-up"></span> Back to top'.html_safe, '#Top' %>
-  </p>
 
   <p>
     &copy; <%= Time.now.year %> <%= site_name %>
     &bull;
-    <%= link_to "About", about_path %></li>
+    <%= link_to "אודות", about_path %></li>
   </p>
 </footer>
