--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,39 +1,27 @@
-<% provide(:title, '') %>
+<% provide(:welcome, '
+      <p><i>נמאס לך מהתמונה בסלון?<br>
+      התמונות בחדר הילדים כבר לא מתאימות?</p></i>
+<h2>בוא להחליף תמונות עם אנשים כמוך</h2>
+'.html_safe) %>
 
-<% provide(:jumbotron, '
-      <h1>Hello, world!</h1>
-      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-      <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
-  '.html_safe) %>
+<% content_for :login do %>
+  <hr style="background: white; width: 85%; height: 3px;">
+  <a href="/users/auth/facebook" class="btn btn-lg btn-primary"><i class="fa fa-facebook"></i> | הכנס עם פייסבוק </a>
+  <a href="/users/sign_up" class="btn btn-lg btn-warning pull-left"> אני רוצה להירשם!</a>
+    <h3>למי שכבר רשום:</h3>
+    <div>
+      <%= simple_form_for(:user, :url => user_session_path) do |f| %>
+        <div class="inputs">
+          <%= f.input :email, :required => true, :autofocus => true, label: 'כתובת מייל', placeholder: 'user@domain.com' %>
+          <%= f.input :password, :required => true, label: 'סיסמא' %>
+          <%= f.input :remember_me, label: false, inline_label: 'זכור אותי', :as => :boolean if devise_mapping.rememberable? %>
+        </div>
+        <%= f.button :submit, "קח אותי פנימה", :class => 'btn btn-success' %>
+      <% end %>
+    </div>
+<% end %>
 
 
-<!-- Example row of columns -->
-<div class="row">
-  <div class="col-md-4">
-    <h2>Heading</h2>
+<h1>Signed in!!!</h1>
 
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-      condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-      sed odio dui. </p>
 
-    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-  </div>
-  <div class="col-md-4">
-    <h2>Heading</h2>
-
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-      condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-      sed odio dui. </p>
-
-    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-  </div>
-  <div class="col-md-4">
-    <h2>Heading</h2>
-
-    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-      felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-      massa justo sit amet risus.</p>
-
-    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-  </div>
-</div>
