--- a/app/views/devise/shared/_login_form_fields.html.erb
+++ b/app/views/devise/shared/_login_form_fields.html.erb
@@ -1,8 +1,3 @@
-<% if identifier == :username %>
-    <%= f.input :username, label: t("model.username"), autofocus: true, input_html: {class: 'special'} %>
-<% else %>
-    <%= f.input :email, autofocus: true, input_html: {class: 'special'} %>
-<% end %>
-
-<%= f.input :password %>
-<%= f.input :remember_me, as: :boolean, inline_label: 'Remember me', label: false if devise_mapping.rememberable? %>
+<%= f.input :email, autofocus: true, input_html: {class: 'special'}, placeholder: 'user@domain.com' %>
+<%= f.input :password, :required => true %>
+<%= f.input :remember_me, label: false, inline_label: true, :as => :boolean if devise_mapping.rememberable? %>
