--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,6 +1,10 @@
-<h2>Resend confirmation instructions</h2>
-<%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => {:method => :post , :class => 'form-vertical' }) do |f| %>
-  <%= f.input :email, :required => true, :autofocus => true %>
-  <%= f.button :submit, 'Resend confirmation instructions', :class => 'btn-primary' %>
+<% content_for :login do %>
+
+  <h2> <%= t('devise.confirmations.confirmation_title') %> </h2>
+  <%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => {:method => :post , :class => 'form-vertical' }) do |f| %>
+    <%= f.input :email, :required => true, :autofocus => true %>
+    <%= f.button :submit, t('devise.confirmations.confirmation_button'), :class => 'btn-primary' %>
+  <% end %>
+  <%= render "devise/shared/links" %>
+
 <% end %>
-<%= render "devise/shared/links" %>
