--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,6 @@
-<h2>Change your password</h2>
+<% content_for :login do %>
+
+  <h2> <%= t('devise.passwords.edit') %> </h2>
 <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => {:method => :put , :class => 'form-vertical' }) do |f| %>
   <%= f.hidden_field :reset_password_token %>
   <%= f.input :password, :required => true, :autofocus => true %>
@@ -6,3 +8,5 @@
   <%= f.button :submit, 'Change my password', :class => 'btn-primary' %>
 <% end %>
 <%= render "devise/shared/links" %>
+
+<% end %>
