--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,10 @@
-<h2>Forgot your password?</h2>
+<% content_for :login do %>
+
+  <h2> <%= t('devise.passwords.forgot') %> </h2>
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :post, class: 'form-vertical'}) do |f| %>
     <%= f.input :email, required: true, autofocus: true %>
-    <%= f.button :submit, 'Send me reset password instructions', class: 'btn-primary' %>
+    <%= f.button :submit, t('devise.passwords.send_password_reset'), class: 'btn-primary' %>
 <% end %>
 <%= render "devise/shared/links" %>
+
+<% end %>
