--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,11 +1,4 @@
-<%= simple_form_for resource, as: resource_name, url: registration_path(resource_name), validate: true, html: {class: 'form-horizontal'},
-                    wrapper: :horizontal_form,
-                    wrapper_mappings: {
-                            check_boxes: :horizontal_radio_and_checkboxes,
-                            radio_buttons: :horizontal_radio_and_checkboxes,
-                            file: :horizontal_file_input,
-                            boolean: :horizontal_boolean
-                    } do |f| %>
+<%= simple_form_for resource, as: resource_name, url: registration_path(resource_name), validate: true, html: {class: 'form-horizontal'} do |f| %>
 
     <%= f.error_notification %>
     <%= render 'users/form_shared_inputs', f: f, user: resource %>
@@ -19,7 +12,7 @@
             <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
         <% end %>
 
-        <%= f.button :submit, 'Update', :class => 'btn-primary' %>
+        <%= f.button :submit, t('helpers.submit.user.update'), :class => 'btn-primary' %>
 
 
     <% else %>
@@ -29,7 +22,7 @@
             <%= f.input :password_confirmation, required: true %>
         <% end %>
 
-        <%= f.button :submit, 'Sign up', :class => 'btn-primary', id: "registerButtonId" %>
+        <%= f.button :submit, t('helpers.submit.user.create'), :class => 'btn-primary', id: "registerButtonId" %>
 
     <% end %>
 
