--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,11 @@
-<%= render "shared/page_title", page_title: 'Edit ' + resource_name.to_s.humanize %>
-<%= render 'devise/registrations/form' %>
+<% content_for :login do %>
+
+  <%= render "shared/page_title", page_title: t('devise.registrations.update') %>
+  <%= render 'devise/registrations/form' %>
 
 
-<%= render "shared/page_title", page_title: 'Cancel my account' %>
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => {:confirm => "Are you sure?"}, :method => :delete %>
+  <%= render "shared/page_title", page_title: 'Cancel my account' %>
+  <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => {:confirm => "Are you sure?"}, :method => :delete %>
   .</p>
+
+<% end %>
