--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,10 @@
-<% provide(:welcome, '
-      <p>נמאס לך מהתמונה בסלון?<br>
-      התמונות בחדר הילדים כבר לא מתאימות?</p>
-<h2>בוא להחליף תמונות עם אנשים כמוך</h2>
-'.html_safe) %>
-
-<% content_for :login do %>
+<% content_for :welcome do %>
+  <p><%= t('welcome.question1') %><br><%= t('welcome.question2') %></p>
+  <h2><%= t('welcome.answer') %></h2>
   <hr style="background: white; width: 85%; height: 3px;">
-  <a href="/users/auth/facebook" class="btn btn-lg btn-primary"><i class="fa fa-facebook"></i> | הכנס עם פייסבוק </a>
-  <a href="/users/sign_up" class="btn btn-lg btn-warning pull-left"> אני רוצה להירשם!</a>
-    <h3>משתמשים רשומים:</h3>
-    <div>
-      <%= simple_form_for(:user, :url => user_session_path) do |f| %>
-        <div class="inputs">
-          <%= f.input :email, :required => true, :autofocus => true, label: 'כתובת מייל', placeholder: 'user@domain.com' %>
-          <%= f.input :password, :required => true, label: 'סיסמא' %>
-          <%= f.input :remember_me, label: false, inline_label: 'זכור אותי', :as => :boolean if devise_mapping.rememberable? %>
-        </div>
-        <%= f.button :submit, "קח אותי פנימה", :class => 'btn btn-success' %>
-      <% end %>
-    </div>
 <% end %>
 
+<%= render template: 'devise/sessions/new' %>
 
 <h1>Signed in!!!</h1>
 
