--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,6 @@
   <%= render 'devise/registrations/form' %>
 
   <br>
-  <%= link_to t('devise.registrations.delete'), registration_path(resource_name), :data => {:confirm => "Are you sure?"}, :method => :delete %>
+  <%= link_to t('devise.registrations.delete'), registration_path(resource_name), :data => {:confirm => t('devise.registrations.delete_user') }, :method => :delete %>
   </div>
 </div>
