--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <body class="<%= controller_name %> <%= action_name %>">
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <%= javascript_include_tag "jquery.backstretch.min" %>
+        <script>    $.backstretch("../assets/background.jpg");
+        </script>
 
         <!-- Top navigation menu -->
         <%= render 'layouts/navigation_top' %>
