--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -32,3 +32,28 @@ body {
   text-align: center;
   margin: 10px;
 }
+
+html,
+body {
+  margin:0;
+  padding:0;
+  height:100%;
+}
+#wrapper {
+  min-height:100%;
+  position:relative;
+}
+#header {
+  padding:20px;
+}
+#content {
+  //padding:10px;
+  padding-bottom:30px;   /* Height of the footer element */
+}
+#footer {
+  width:100%;
+  height:30px;
+  position:absolute;
+  bottom:0;
+  left:0;
+}
