fixed footer position again

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,11 @@
           <%= render 'layouts/navigation_top' %>
         </div>
 
-        <div id="content"></div>
-        <div id="main" role="main" class="container">
-          <%= render 'layouts/messages' %>
-          <%= render 'layouts/content' %>
+        <div id="content">
+          <div id="main" role="main" class="container">
+            <%= render 'layouts/messages' %>
+            <%= render 'layouts/content' %>
+          </div>
         </div>
 
         <div id="footer">
