--- a/app/views/devise/shared/_sign_in_providers_list.html.erb
+++ b/app/views/devise/shared/_sign_in_providers_list.html.erb
@@ -1,4 +1,10 @@
 <%= render "shared/page_title", page_title: t('sign_in.title') %>
+<div class="row">
+  <div class="col-xs-6">
 
 <a href="/users/auth/facebook" class="btn btn-lg btn-primary"><i class="fa fa-facebook"></i><%= t('sign_in.facebook') %></a>
-<a href="/users/sign_up" class="btn btn-lg btn-warning pull-left"><%= t('sign_in.with_email') %></a>
+  </div>
+<div class="col-xs-6">
+<a href="/users/sign_up" class="btn btn-lg btn-warning"><%= t('sign_in.with_email') %></a>
+  </div>
+</div>
