--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
       <%= javascript_include_tag "jquery.backstretch.min" %>
-      <script>    $.backstretch("../assets/background.jpg");
+      <% if !user_signed_in? %>
+        <script>    $.backstretch("../assets/background.jpg");
+      <% end %>
       </script>
       <div id="wrapper">
         <!-- Top navigation menu -->
