--- a/app/views/layouts/_navigation_footer.html.erb
+++ b/app/views/layouts/_navigation_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-  <p>
+  <p style="color: #BBBBBB">
     &copy; <%= Time.now.year %> <%= site_name %>
     &bull;
     <%= link_to "אודות", about_path %></li>
