--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -65,6 +65,6 @@ body {
   position:absolute;
   z-index:1;
 }
-p, label, h1, h2, h3, h4, h5 {
+p, label, h1, h2, h3, h4, h5,th, td {
   color: #BBBBBB;
 }
