--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New item</h1>
-
-<%= render 'form' %>
-
+<div class="col-lg-6 col-md-offset-3">
+  <div class="jumbotron">
+    <%= render 'form' %>
+  </div>
+</div>
 <%= link_to 'Back', items_path %>
