--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,11 @@
         </div>
 
         <div id="content">
-          <div id="main" role="main" class="container">
-            <%= render 'layouts/messages' %>
-            <%= render 'layouts/content' %>
+          <div id="main" role="main">
+            <div class="container">
+              <%= render 'layouts/messages' %>
+              <%= render 'layouts/content' %>
+            </div>
           </div>
         </div>
 
