--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,7 +1,7 @@
-<h1>New item</h1>
-<div class="col-lg-6 col-md-offset-3">
-  <div class="jumbotron">
-    <%= render 'form' %>
+<h3><%= t('NewItem') %></h3>
+  <div class="col-lg-6 col-md-offset-3">
+    <div class="jumbotron">
+      <%= render 'form' %>
+    </div>
   </div>
-</div>
-<%= link_to 'Back', items_path %>
+<%= link_to t('Back'), items_path %>
