--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,9 +1,9 @@
-<%= simple_form_for resource, as: resource_name, url: registration_path(resource_name), validate: true, html: {class: 'form-horizontal'} do |f| %>
+<%= simple_form_for resource, as: resource_name, url: registration_path(resource_name), validate: true, :html => { :class => 'form-inline' } do |f| %>
 
     <%= f.error_notification %>
     <%= render 'users/form_shared_inputs', f: f, user: resource %>
 
-
+    <br/>
     <% if current_user %>
         <!-- Editing user with local password -->
         <% if !current_user.has_no_password? %>
@@ -11,6 +11,8 @@
             <%= f.input :password_confirmation, :placeholder => t('devise.registrations.password_hint'), :required => false %>
             <%= f.input :current_password, :required => true %>
         <% end %>
+
+        <br/>
 
         <%= f.button :submit, t('helpers.submit.user.update'), :class => 'btn-primary' %>
 
@@ -21,6 +23,8 @@
             <%= f.input :password, required: true %>
             <%= f.input :password_confirmation, required: true %>
         <% end %>
+
+    <hr/>
 
         <%= f.button :submit, t('helpers.submit.user.create'), :class => 'btn-primary', id: "registerButtonId" %>
 
