--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -34,13 +34,17 @@ body {
 
 .page-header {
   text-align: center;
-  margin: 10px;
+  margin: 0px;
+  padding: 5px;
+  border-bottom: none;
 }
 
 html,
 body {
-  margin:0;
-  padding:0;
+  margin-bottom:0;
+  padding-bottom:0;
+  margin-top: 5px;
+  padding-top: 5px;
   height:100%;
 }
 #wrapper {
@@ -70,6 +74,9 @@ body {
 p, label, h1, h2, h3, h4, h5,th, td {
   color: #BBBBBB;
 }
-.navbar {
-  height: 50px;
+
+h2 {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin: 0px;
 }
