--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -2,29 +2,26 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-ul {
-  padding:0 0 0 0;
-  margin:0 0 0 0;
-}
-ul li {
-  list-style:none;
-  margin-bottom:25px;
-}
-ul li img {
-  cursor: pointer;
+.gallery{
+  ul {
+    padding:0 0 0 0;
+    margin:0 0 0 0;
+  }
+  ul li {
+    list-style:none;
+    margin-bottom:25px;
+  }
+  ul li img {
+    cursor: pointer;
+  }
+  .thumbnail {
+    position: relative;
+    padding: 0px;
+    margin-bottom: 20px;
+  }
+
+  .thumbnail img {
+    width: 100%;
+  }
 }
 
-body {
-  #min-height: 3000px;
-  #padding-top: 30px;
-}
-
-.thumbnail {
-  position: relative;
-  padding: 0px;
-  margin-bottom: 20px;
-}
-
-.thumbnail img {
-  width: 100%;
-}
