--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing item</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @item %> |
-<%= link_to 'Back', items_path %>
+<%= link_to t('model.all_items'), items_path, class: "btn btn-primary btn-lg" %>
+<%= render "shared/page_title", page_title: t('EditItem') %>
+<div class="col-lg-6 col-md-offset-3">
+  <br/>
+  <div class="jumbotron">
+    <%= render 'form' %>
+  </div>
+</div>
