--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,5 +8,16 @@
 
 <%= render "shared/page_title", page_title: t('index_gallery') %>
 
+<% @items = Item.where.not(:user => current_user) %>
 
+<div class="gallery">
+  <br/>
+  <ul class="row">
+  <% @items.each do |item| %>
+    <li class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+      <%= render 'items/item_block', locals: {item: item}%>
+    </li>
+  <% end %>
+  </ul>
+</div>
 
