--- a/app/views/users/_form_shared_inputs.html.erb
+++ b/app/views/users/_form_shared_inputs.html.erb
@@ -1,5 +1,5 @@
 <%= f.input :first_name, label: t("model.firstName"), autofocus: true %>
-<%= f.input :last_name, label: t("model.lastName") %>
+<%= f.input :last_name, label: t("model.lastName") %><br/>
 <%= f.input :email, label: t("model.email") %>
-<%= f.input :phone, label: t("model.phone") %>
+<%= f.input :phone, label: t("model.phone") %> <br/>
 <%= f.association :region, label_method: :description, value_method: :id, label: t("model.region") %>
