--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -14,14 +14,24 @@
   ul li img {
     cursor: pointer;
   }
-  .thumbnail {
-    position: relative;
-    padding: 0px;
-    margin-bottom: 20px;
-  }
-
-  .thumbnail img {
-    width: 100%;
-  }
+}
+.thumbnail {
+  position: relative;
+  padding: 0px;
+  margin-bottom: 20px;
 }
 
+//.thumbnail-image-div {
+//  align-content: center;
+//  height: 150px;
+//  width: 200px;
+//}
+//
+.thumbnail img {
+  width: 100%;
+  height: 100%;
+}
+
+#ex1Slider .slider-selection {
+  background: #BABABA;
+}
