--- a/app/views/users/_form_shared_inputs.html.erb
+++ b/app/views/users/_form_shared_inputs.html.erb
@@ -2,4 +2,4 @@
 <%= f.input :last_name, label: t("model.lastName") %><br/>
 <%= f.input :email, label: t("model.email") %>
 <%= f.input :phone, label: t("model.phone") %> <br/>
-<%= f.association :region, label_method: :description, value_method: :id, label: t("model.region") %>
+<%= f.association :region, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, label: t("model.region") %>
