--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,15 +8,17 @@
 
 <%= render "shared/page_title", page_title: t('index_gallery') %>
 
-<% @items = Item.where.not(:user => current_user) %>
+<% @items = Item.where.not(:user => current_user)
+  .where(:is_blocked => false)
+  .where(:is_active => true)
+  .where.not(id: current_user.block_items.pluck(:id))
+%>
 
 <div class="gallery">
   <br/>
   <ul class="row">
   <% @items.each do |item| %>
-    <li class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-      <%= render 'items/item_block', locals: {item: item}%>
-    </li>
+    <%= render 'items/item_block', locals: {item: item}%>
   <% end %>
   </ul>
 </div>
