--- a/app/views/wants/toggle.js.erb
+++ b/app/views/wants/toggle.js.erb
@@ -1,7 +1,7 @@
 <% if @want.persisted? %>
-  $('a[data-want-item-id="<%= @want.item_id %>"]').addClass('btn-success');
-  $('a[data-want-item-id="<%= @want.item_id %>"]').removeClass('btn-default');
+  $('li[data-item-id="<%= @want.item_id %>"] .want_btn').addClass('btn-success');
+  $('li[data-item-id="<%= @want.item_id %>"] .want_btn').removeClass('btn-default');
 <% else %>
-  $('a[data-want-item-id="<%= @want.item_id %>"]').removeClass('btn-success');
-  $('a[data-want-item-id="<%= @want.item_id %>"]').addClass('btn-default');
+  $('li[data-item-id="<%= @want.item_id %>"] .want_btn').removeClass('btn-success');
+  $('li[data-item-id="<%= @want.item_id %>"] .want_btn').addClass('btn-default');
 <% end %>
