--- a/app/views/layouts/_content.html.erb
+++ b/app/views/layouts/_content.html.erb
@@ -22,7 +22,7 @@
 
   <div class="row">
     <div class="col-lg-12 col-sm-12">
-       <%= yield %>
+       <%= yield :content %>
     </div>
   </div>
 <% end %>
